<resources>
    <string name="app_name">My Money</string>
    <string name="login">Login</string>
    <string name="loginScreen">Login Screen</string>
    <string name="register">Registration Screen</string>
    <string name="register_">Register</string>
    <string name="reminder">Reminder</string>
    <string name="reminders">Reminders</string>
    <string name="register__">Register</string>
    <string name="enterMail">Enter Your Mail</string>
    <string name="password">Password</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="morning_reminder">Morning Reminder</string>
    <string name="evening_reminder">Evening Reminder</string>
    <string name="reminder_me">Reminder me at :</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Submit">submit</string>
    <string name="forget_password">forget password</string>
    <string name="total_Balance">My Wallet</string>
    <string name="label">Label</string>
    <string name="amount">Amount</string>
    <string name="dec">Description</string>
    <string name="transaction">Add Transaction</string>
    <string name="updateTransaction">Update Transaction</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
</resources>
