<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTransactionActivity">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_margin="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/ic_baseline_close_24"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/label_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/label"
            app:hintEnabled="true"
            app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/label_Input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/label_selector"
            android:drawablePadding="10dp"
            android:maxLines="1"
            android:inputType="text"
            />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/amount_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/amount"
            app:hintEnabled="true"
            app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/amount_Input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/label_selector"
            android:drawablePadding="10dp"
            android:maxLines="1"
            android:inputType="number"
            />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dec_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/dec"
            app:hintEnabled="true"
            app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dec_Input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/dec_selector"
            android:drawablePadding="10dp"
            android:maxLines="5"
            android:inputType="text"
            />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/btn_transaction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/transaction"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:background="@color/green"
            android:textColor="@color/white"
            android:padding="12dp"

            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>