<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".login.LogInActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="316dp"
        android:layout_height="52dp"
        android:layout_marginTop="72dp"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/crd"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:cardBackgroundColor="@color/blue_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:cardCornerRadius="40dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="18dp"
                android:text="@string/enterMail"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etEmail_Login"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="18dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:drawableStart="@drawable/custom_mail_ic"
                android:drawablePadding="10dp"
                android:background="@drawable/custom_input"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="18dp"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etPassword_login"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:autofillHints=""
                android:inputType="textPassword"
                android:drawablePadding="10dp"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/custom_eye_ic"/>


            <Button
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="150dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_bg"
                android:text="@string/login" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtForgetPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Forget password.."
                    android:layout_marginStart="120dp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorPrimary"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="80dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    app:layout_constraintVertical_bias="0.13">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Already have an account.." />

                    <TextView
                        android:id="@+id/txt_registration"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/register__"
                        android:textColor="@color/colorPrimary" />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
